--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -2,6 +2,9 @@ name: Generate changelog
 on:
   release:
     types: [created, edited]
+  push:
+    branches: [$default-branch]
+  # Allows you to run this workflow manually from the Actions tab
 
 jobs:
   generate-changelog:
@@ -12,7 +15,7 @@ jobs:
         fetch-depth: 0
     - uses: BobAnkh/auto-generate-changelog@master
       with:
-        REPO_NAME: '<YourUserName>/<YourRepoName>'
+        REPO_NAME: 'carsonpurnell/cryotomosim_CTS'
         ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
         PATH: 'CHANGELOG.md'
         COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
